@@ -36,6 +36,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - change from alder32 to crc32 to avoid collisions on small frames.
     - automatically decrease the jpeg quality when to many frames in queue.
     - update the screen with png frames when no data is transmitted.
+    - make screen repaint faster.
 
   [ Mihai Moldovan ]
   * Initial release:
